--- a/index.html
+++ b/index.html
@@ -6,176 +6,180 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Cinzel+Decorative:wght@700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- ========= PAGE 1 : HERO ========= -->
-  <header class="hero" id="top">
-    <div class="hero-name">
+  <header class="top-bar">
+    <div class="name-glow">
       SUGESHNA SANTHALINGAM SUBBULAKSHMI
     </div>
-
-    <div class="hero-center">
-      <p class="hero-subtitle">welcome to my</p>
-
-      <h1 class="hero-title">
-        <span class="hero-letter">P</span>
-        <span class="hero-letter">O</span>
-        <span class="hero-letter">R</span>
-        <span class="hero-letter">T</span>
-        <span class="hero-letter">F</span>
-        <span class="hero-letter">O</span>
-        <span class="hero-letter">L</span>
-        <span class="hero-letter">I</span>
-        <span class="hero-letter">O</span>
-      </h1>
-
-      <div class="hero-image-wrapper">
-        <img src="me.png" alt="Sugeshna portrait" class="hero-image" />
-      </div>
-    </div>
-
-    <a href="#about" class="scroll-down">scroll</a>
   </header>
 
-  <!-- ========= PAGE 2 : ABOUT ========= -->
-  <section id="about" class="section about-section">
-    <div class="about-left slide-in-left">
-      <h2 class="section-eyebrow">ABOUT ME</h2>
+  <main>
 
-      <p>
-        Hi, I’m Sugeshna – obsessed with building my future at a sprinter’s pace.
-      </p>
-      <p>
-        I blend data, creativity, and people skills – with real sales experience
-        and a mind that loves patterns.
-      </p>
-      <p>
-        I bring both logic + hustle wherever I go.
-      </p>
-      <p>
-        Not perfect, not finished – but fully committed to building something
-        bigger.
-      </p>
-    </div>
+    <!-- ================= HERO / PAGE 1 ================= -->
+    <section class="section hero" id="home">
+      <div class="hero-inner">
 
-    <div class="about-right slide-in-right">
-      <div class="analytics-orbit">
-        <div class="analytics-glow"></div>
+        <div class="hero-text">
+          <p class="hero-subtitle">welcome to my</p>
+          <h1 class="hero-title">PORTFOLIO</h1>
+        </div>
 
-        <div class="bar bar-1"></div>
-        <div class="bar bar-2"></div>
-        <div class="bar bar-3"></div>
-        <div class="bar bar-4"></div>
+        <div class="hero-photo">
+          <img src="me.png" alt="Sugeshna" />
+        </div>
 
-        <div class="orbit orbit-1"></div>
-        <div class="orbit orbit-2"></div>
-        <div class="orbit orbit-3"></div>
-
-        <div class="dot dot-1"></div>
-        <div class="dot dot-2"></div>
-        <div class="dot dot-3"></div>
-        <div class="dot dot-4"></div>
+        <div class="scroll-indicator">
+          <span>scroll</span>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- ========= PAGE 3 : JOURNEY ========= -->
-  <section id="journey" class="section journey-section">
-    <div class="journey-header slide-in-up">
-      <p class="journey-eyebrow">what I have done so far</p>
-      <h2 class="journey-title">MY INFORMATION SYSTEMS JOURNEY</h2>
-    </div>
+    <!-- ================= ABOUT ME / PAGE 2 ================= -->
+    <section class="section about" id="about">
+      <div class="about-inner fade-in">
+        <div class="about-text">
+          <h2 class="section-heading halo">ABOUT ME</h2>
 
-    <div class="timeline">
-
-      <!-- 1. BBA – LEFT CARD -->
-      <div class="timeline-item left slide-in-left">
-        <div class="timeline-side timeline-card">
-          <h3>Bachelors of Business Administration (Information Systems)</h3>
-          <p class="timeline-institution">PSG College of Arts and Science</p>
-          <p class="timeline-text">
-            Built a strong base in business, IT, and analytics – understanding how
-            systems, data, and people come together to drive decisions.
+          <p>
+            Hi, I’m Sugeshna – obsessed with building my future at a sprinter’s pace.
           </p>
-          <p class="timeline-text">
-            CGPA: <strong>8.8 / 10</strong>
+          <p>
+            I blend data, creativity, and people skills – with real sales experience and a mind that loves patterns.
+          </p>
+          <p>
+            I bring both logic + hustle wherever I go.
+          </p>
+          <p>
+            Not perfect, not finished – but fully committed to building something bigger.
           </p>
         </div>
 
-        <div class="timeline-center">
-          <div class="timeline-circle">
-            <img src="psg-logo.png" alt="PSG logo" class="timeline-logo" />
+        <div class="about-visual">
+          <div class="analytics-orbit">
+            <div class="orbit-circle big"></div>
+            <div class="orbit-circle medium"></div>
+            <div class="orbit-circle small"></div>
+
+            <div class="bar-chart">
+              <div class="bar bar-1"></div>
+              <div class="bar bar-2"></div>
+              <div class="bar bar-3"></div>
+              <div class="bar bar-4"></div>
+              <div class="line-1"></div>
+              <div class="line-2"></div>
+              <div class="spark spark-1"></div>
+              <div class="spark spark-2"></div>
+            </div>
           </div>
         </div>
-
-        <div class="timeline-side timeline-date">
-          <span>Sept 2020 – July 2023</span>
-        </div>
       </div>
+    </section>
 
-      <!-- 2. MBA – RIGHT CARD -->
-      <div class="timeline-item right slide-in-right">
-        <div class="timeline-side timeline-date">
-          <span>Aug 2023 – May 2025</span>
-        </div>
+    <!-- ================= JOURNEY / PAGE 3 ================= -->
+    <section class="section journey" id="journey">
+      <div class="journey-inner fade-in">
+        <p class="journey-kicker">what I have done so far</p>
+        <h2 class="section-heading halo journey-heading">
+          MY INFORMATION SYSTEMS JOURNEY
+        </h2>
 
-        <div class="timeline-center">
-          <div class="timeline-circle">
-            <img src="utoledo-logo.png" alt="University of Toledo logo" class="timeline-logo" />
+        <div class="timeline">
+
+          <!-- 1. BBA -->
+          <div class="timeline-item left slide-in-left">
+            <div class="timeline-card">
+              <h3 class="timeline-title">
+                Bachelors of Business Administration <br />
+                (Information Systems)
+              </h3>
+              <p class="timeline-subtitle">
+                PSG College of Arts and Science
+              </p>
+              <p class="timeline-body">
+                Built a strong base in business, IT, and analytics – understanding how systems, data, and people come together to drive decisions.
+              </p>
+              <p class="timeline-meta">
+                CGPA: <span>8.8 / 10</span>
+              </p>
+            </div>
+
+            <div class="timeline-logo-wrapper">
+              <div class="timeline-logo-circle">
+                <img src="psg-logo.png" alt="PSG logo" />
+              </div>
+            </div>
+
+            <div class="timeline-date-pill">
+              SEPT 2020 – JULY 2023
+            </div>
           </div>
-        </div>
 
-        <div class="timeline-side timeline-card">
-          <h3>Masters of Business Administration (Information Systems)</h3>
-          <p class="timeline-institution">The University of Toledo</p>
-          <p class="timeline-text">
-            Leveled up into advanced analytics, strategy, and real-world projects
-            connecting data to business outcomes.
-          </p>
-          <p class="timeline-text">
-            GPA: <strong>3.4 / 4.0</strong>
-          </p>
-        </div>
-      </div>
+          <!-- 2. MBA -->
+          <div class="timeline-item right slide-in-right">
+            <div class="timeline-card">
+              <h3 class="timeline-title">
+                Masters of Business Administration <br />
+                (Information Systems)
+              </h3>
+              <p class="timeline-subtitle">
+                The University of Toledo
+              </p>
+              <p class="timeline-body">
+                Leveled up into advanced analytics, strategy, and real-world projects connecting data to business outcomes.
+              </p>
+              <p class="timeline-meta">
+                GPA: <span>3.4 / 4.0</span>
+              </p>
+            </div>
 
-      <!-- 3. TRI BEE – RIGHT CARD (DATE OPPOSITE, REMOTE UNDER ROLE) -->
-      <div class="timeline-item right slide-in-right">
-        <!-- DATE on the LEFT side of the line -->
-        <div class="timeline-side timeline-date">
-          <span>Jan 2024 – June 2024</span>
-        </div>
+            <div class="timeline-logo-wrapper">
+              <div class="timeline-logo-circle">
+                <img src="utoledo-logo.png" alt="The University of Toledo logo" />
+              </div>
+            </div>
 
-        <!-- CIRCLE LOGO IN THE MIDDLE -->
-        <div class="timeline-center">
-          <div class="timeline-circle">
-            <img src="tribee-logo.png" alt="Tri Bee logo" class="timeline-logo" />
+            <div class="timeline-date-pill">
+              AUG 2023 – MAY 2025
+            </div>
           </div>
-        </div>
 
-        <!-- CARD on the RIGHT -->
-        <div class="timeline-side timeline-card">
-          <h3>Tri Bee — Data Analytics Intern</h3>
-          <p class="timeline-institution">Remote</p>
-          <p class="timeline-text">
-            Analyzed and prepared IT performance data using SQL and Python to
-            uncover key operational trends.
-          </p>
-          <p class="timeline-text">
-            Designed interactive Power BI dashboards to present insights and
-            guide strategic decision-making.
-          </p>
+          <!-- 3. Tri Bee -->
+          <div class="timeline-item left slide-in-left">
+            <div class="timeline-card">
+              <h3 class="timeline-title">
+                Tri Bee — Data Analytics Intern
+              </h3>
+              <p class="timeline-subtitle">
+                Remote
+              </p>
+              <p class="timeline-body">
+                Analyzed and prepared IT performance data using SQL and Python to uncover key operational trends.
+              </p>
+              <p class="timeline-body">
+                Designed interactive Power BI dashboards to present insights and guide strategic decision-making.
+              </p>
+            </div>
+
+            <div class="timeline-logo-wrapper">
+              <div class="timeline-logo-circle">
+                <img src="tribee-logo.png" alt="Tri Bee logo" />
+              </div>
+            </div>
+
+            <div class="timeline-date-pill">
+              JAN 2024 – JUNE 2024
+            </div>
+          </div>
+
         </div>
       </div>
+    </section>
 
-    </div>
-  </section>
+  </main>
 
   <script src="script.js"></script>
 </body>
