--- a/index.html
+++ b/index.html
@@ -179,6 +179,49 @@
       </div>
     </section>
 
+    <!-- ================== PAGE 4 – LET'S WORK TOGETHER ================== -->
+    <section class="contact-section" id="contact">
+      <div class="contact-inner fade-on-scroll">
+        <div class="contact-heading">
+          <div class="contact-top-line">
+            <span class="contact-main">LET'S</span>
+            <span class="contact-script">Work</span>
+          </div>
+          <div class="contact-bottom-line">
+            <span class="contact-main">TOGETHER</span>
+          </div>
+        </div>
+
+        <div class="contact-details">
+          <div class="contact-row">
+            <span class="contact-icon email-icon">✉️</span>
+            <a href="mailto:sugeshnalingam@gmail.com" class="contact-link">
+              sugeshnalingam@gmail.com
+            </a>
+          </div>
+
+          <div class="contact-row">
+            <span class="contact-icon phone-icon">📞</span>
+            <a href="tel:+14193925270" class="contact-link">
+              (419) 392-5270
+            </a>
+          </div>
+
+          <div class="contact-row">
+            <span class="contact-icon linkedin-icon">in</span>
+            <a
+              href="https://www.linkedin.com/in/sugeshna-santhalingam"
+              class="contact-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              www.linkedin.com/in/sugeshna-santhalingam
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
