--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- ================== PAGE 1 – HERO ================== -->
-    <div class="hero" id="top">
+    <!-- ============== PAGE 1 – HERO ================= -->
+    <section class="hero" id="top">
       <header class="top-bar">
         <span class="logo">
           SUGESHNA SANTHALINGAM SUBBULAKSHMI
@@ -25,20 +25,16 @@
       <main class="hero-content">
         <div class="text-block">
           <p class="eyebrow">welcome to my</p>
-
-          <h1 class="headline">
-            PORTFOLIO
-          </h1>
+          <h1 class="headline">PORTFOLIO</h1>
         </div>
 
         <div class="photo-wrapper">
-          <!-- make sure this file is literally named me.png in the repo -->
           <img src="me.png" alt="Sugeshna in blazer" class="hero-photo" />
         </div>
       </main>
-    </div>
+    </section>
 
-    <!-- ================== PAGE 2 – ABOUT ME ================== -->
+    <!-- ============== PAGE 2 – ABOUT ME ============== -->
     <section class="about-section" id="about">
       <div class="about-inner fade-on-scroll">
         <div class="about-text">
@@ -49,13 +45,15 @@
               Hi, I’m Sugeshna – obsessed with building my future at a sprinter’s pace.
             </p>
             <p>
-              I blend data, creativity, and people skills – with real sales experience and a mind that loves patterns.
+              I blend data, creativity, and people skills – with real sales
+              experience and a mind that loves patterns.
             </p>
             <p>
               I bring both logic + hustle wherever I go.
             </p>
             <p>
-              Not perfect, not finished – but fully committed to building something bigger.
+              Not perfect, not finished – but fully committed to building
+              something bigger.
             </p>
           </div>
         </div>
@@ -73,7 +71,7 @@
               <polyline
                 points="0,80 50,60 100,70 150,40 200,45"
                 fill="none"
-                stroke="rgba(255,255,255,0.75)"
+                stroke="rgba(255,255,255,0.8)"
                 stroke-width="2.5"
                 stroke-linecap="round"
                 stroke-linejoin="round"
@@ -91,7 +89,7 @@
       </div>
     </section>
 
-    <!-- ================== PAGE 3 – IS JOURNEY ================== -->
+    <!-- ============== PAGE 3 – IS JOURNEY ============ -->
     <section class="journey-section" id="journey">
       <div class="journey-header fade-on-scroll">
         <p class="journey-tagline">what I have done so far</p>
@@ -163,8 +161,8 @@
               uncover key operational trends.
             </p>
             <p class="timeline-body">
-              Designed interactive Power BI dashboards to present insights and
-              guide strategic decision-making.
+              Designed interactive Power BI dashboards to present insights and guide
+              strategic decision-making.
             </p>
           </div>
 
@@ -179,7 +177,7 @@
       </div>
     </section>
 
-    <!-- ================== PAGE 4 – LET'S WORK TOGETHER ================== -->
+    <!-- ============== PAGE 4 – LET'S WORK TOGETHER === -->
     <section class="contact-section" id="contact">
       <div class="contact-inner fade-on-scroll">
         <div class="contact-heading">
